src/test/ui/assign-imm-local-twice.ast.stderr
error[E0384]: cannot assign twice to immutable variable `v`
  --> $DIR/assign-imm-local-twice.rs:20:5
   |
LL |     v = 1; //[ast]~ NOTE first assignment
   |     ----- first assignment to `v`
...
LL |     v = 2; //[ast]~ ERROR cannot assign twice to immutable variable
   |     ^^^^^ cannot assign twice to immutable variable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0384`.
